# fastapi_elastic

./: .env  .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml
api/: app.py  elastic_index.py
bot/: Dockerfile  requirements.txt
bot/telegram_bot/: __init__.py  __main__.py  headlines.py  query.py
nginx/: .htpasswd  Dockerfile  nginx.conf
nginx/src/: index-1.html  index.html
