[tool.poetry]
name = "biohack"
version = "0.1.0"
description = ""
authors = ["Mikhail Gurevich <gurevich3004@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.82.0"
elasticsearch = "^8.4.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
